fix alignment for safari

--- a/src/shared/components/Settings/Profile/Skills/styles.scss
+++ b/src/shared/components/Settings/Profile/Skills/styles.scss
@@ -318,7 +318,7 @@
   }
 
   .name-wrapper {
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
